--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>LeoPortfolio</title>
-  <base href="/app/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/Leo/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="/app/styles.2b86b246bea42f5110ce.css"></head>
+<link rel="stylesheet" href="/Leo/styles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="/app/runtime-es2015.7dd62d5601ec9693a68e.js" type="module"></script><script src="/app/runtime-es5.7dd62d5601ec9693a68e.js" nomodule defer></script><script src="/app/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="/app/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="/app/main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="/app/main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
+<script src="/Leo/runtime-es2015.e517962fe3a54ab93ccd.js" type="module"></script><script src="/Leo/runtime-es5.e517962fe3a54ab93ccd.js" nomodule defer></script><script src="/Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="/Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="/Leo/main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="/Leo/main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
 </html>
