--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>LeoPortfolio</title>
-  <base href="/Leo/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/Leo/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="https://leoarokiaraj.github.io/Leo/styles.2b86b246bea42f5110ce.css"></head>
+<link rel="stylesheet" href="styles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="https://leoarokiaraj.github.io/Leo/runtime-es2015.fca18f91d0f74df40dcf.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/runtime-es5.fca18f91d0f74df40dcf.js" nomodule defer></script><script src="https://leoarokiaraj.github.io/Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="https://leoarokiaraj.github.io/Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.67992d454ffbfc08fee5.js" type="module"></script><script src="main-es5.67992d454ffbfc08fee5.js" nomodule defer></script></body>
 </html>
