--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="/Leo/styles.2b86b246bea42f5110ce.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script src="/Leo/runtime-es2015.e517962fe3a54ab93ccd.js" type="module"></script><script src="/Leo/runtime-es5.e517962fe3a54ab93ccd.js" nomodule defer></script><script src="/Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="/Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="/Leo/main-es2015.66a87d98c8bb05f2263c.js" type="module"></script><script src="/Leo/main-es5.66a87d98c8bb05f2263c.js" nomodule defer></script></body>
+<script src="/Leo/runtime-es2015.js" type="module"></script><script src="/Leo/runtime-es5.js" nomodule defer></script><script src="/Leo/polyfills-es5.js" nomodule defer></script><script src="/Leo/polyfills-es2015.js" type="module"></script><script src="/Leo/styles-es2015.js" type="module"></script><script src="/Leo/styles-es5.js" nomodule defer></script><script src="/Leo/vendor-es2015.js" type="module"></script><script src="/Leo/vendor-es5.js" nomodule defer></script><script src="/Leo/main-es2015.js" type="module"></script><script src="/Leo/main-es5.js" nomodule defer></script></body>
 </html>
