--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="styles.2b86b246bea42f5110ce.css"></head>
+<link rel="stylesheet" href="Leo/styles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
+<script src="Leo/runtime-es2015.f385874955fda756cd18.js" type="module"></script><script src="Leo/runtime-es5.f385874955fda756cd18.js" nomodule defer></script><script src="Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="Leo/main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="Leo/main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
 </html>
