--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>LeoPortfolio</title>
-  <base href="/Leo/">
+  <base href="https://leoarokiaraj.github.io/Leo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="styles.2b86b246bea42f5110ce.css"></head>
+<link rel="stylesheet" href="/Leostyles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="main-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
+<script src="/Leoruntime-es2015.62ea133d459d7d41c7ad.js" type="module"></script><script src="/Leoruntime-es5.62ea133d459d7d41c7ad.js" nomodule defer></script><script src="/Leopolyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="/Leopolyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="/Leomain-es2015.54baa060e30fb3461e77.js" type="module"></script><script src="/Leomain-es5.54baa060e30fb3461e77.js" nomodule defer></script></body>
 </html>
