--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>LeoPortfolio</title>
-  <base href="/Leo/">
+  <base href="https://leoarokiaraj.github.io/Leo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-  <script>
-    const path = window.location.pathname.slice(1);
-    localStorage.setItem('path', path);
-    window.location.href='../';
- </script>
 <link rel="stylesheet" href="styles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.1f12e81b47f421b27b74.js" type="module"></script><script src="main-es5.1f12e81b47f421b27b74.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.3bd9794f883bcf2d680c.js" type="module"></script><script src="main-es5.3bd9794f883bcf2d680c.js" nomodule defer></script></body>
 </html>
