--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-<link rel="stylesheet" href="/Leo/styles.2b86b246bea42f5110ce.css"></head>
+<link rel="stylesheet" href="https://leoarokiaraj.github.io/Leo/styles.2b86b246bea42f5110ce.css"></head>
 <body>
   <app-root></app-root>
-<script src="/Leo/runtime-es2015.e517962fe3a54ab93ccd.js" type="module"></script><script src="/Leo/runtime-es5.e517962fe3a54ab93ccd.js" nomodule defer></script><script src="/Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="/Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="/Leo/main-es2015.2a3e7518b32bdd95df22.js" type="module"></script><script src="/Leo/main-es5.2a3e7518b32bdd95df22.js" nomodule defer></script></body>
+<script src="https://leoarokiaraj.github.io/Leo/runtime-es2015.fca18f91d0f74df40dcf.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/runtime-es5.fca18f91d0f74df40dcf.js" nomodule defer></script><script src="https://leoarokiaraj.github.io/Leo/polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="https://leoarokiaraj.github.io/Leo/polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/main-es2015.2a3e7518b32bdd95df22.js" type="module"></script><script src="https://leoarokiaraj.github.io/Leo/main-es5.2a3e7518b32bdd95df22.js" nomodule defer></script></body>
 </html>
